[tool.poetry]
name = "graph"
version = "0.0.0"
description = "graphs playground"
authors = ["nvu"]
maintainers = ["nvu"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.10, <3.12"
jraph = "0.0.6.dev0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.3.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
